# aetherius

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: registry.py
include/: Chunk.h  Connection.h  Logger.h  NbtBuilder.h  PacketBuffer.h  Server.h  World.h
include/auth/: Auth.h  MojangAuth.h  MojangAuthHelper.h  OfflineAuth.h  UUID.h
include/commands/: Command.h  CommandRegistry.h  ConsoleCommand.h  GameCommand.h
include/commands/consoleCommands/: HelpCommand.h
include/commands/gameCommands/: HelpGameCommand.h  KillCommand.h  PingCommand.h  TimeCommand.h
include/console/: ConsoleManager.h  Logger.h
include/crypto/: AES.h  RSA.h
include/game/nbt/: NbtBuilder.h
include/game/player/: Player.h  PlayerData.h  PlayerList.h
include/game/world/: Chunk.h  ChunkManager.h  RegionFile.h  World.h  WorldGenerator.h  WorldStorage.h
include/network/: Connection.h  Http.h  Metadata.h  PacketBuffer.h  PacketRegistry.h
include/network/interfaces/: IInPacket.h  IOutPacket.h
include/network/packet/: InboundPacket.h  OutboundPacket.h  Packet.h
include/network/packet/handshake/: HandshakePacket.h
include/network/packet/inbound/handshake/: HandshakePacket.h
include/network/packet/inbound/login/: EncryptionResponsePacket.h  LoginStartPacket.h
include/network/packet/inbound/play/: ArmAnimationPacket.h  BlockDigRequestPacket.h  BlockPlacePacket.h  ClientAbilitiesPacket.h  ClientSettingsPacket.h  ClientStatusPacket.h  EntityActionPacket.h  GetChatMessagePacket.h  HeldItemChangePacket.h  KeepAlivePacketPlay.h  PlayerPositionPacket.h  SetCreativeSlotPacket.h  TeleportConfirmPacket.h
include/network/packet/inbound/status/: StatusPingPacket.h  StatusRequestPacket.h
include/network/packet/login/: EncryptionResponsePacket.h  LoginStartPacket.h  LoginSuccessPacket.h  SetCompressionPacket.h
include/network/packet/outbound/login/: DisconnectPacket.h  LoginSuccessPacket.h  SetCompressionPacket.h
include/network/packet/outbound/play/: BlockChangePacket.h  BlockDigResponsePacket.h  BrandPacket.h  ChatMessagePacket.h  ChunkDataPacket.h  DeclareCommandsPacket.h  DestroyEntitiesPacket.h  DisconnectPacketPlay.h  EntityAnimationPacket.h  EntityEquipmentPacket.h  EntityHeadLookPacket.h  EntityMetadataPacket.h  (+13 more)
include/network/packet/play/: ArmAnimationPacket.h  BlockChangePacket.h  BlockDigRequestPacket.h  BlockDigResponsePacket.h  BlockPlacePacket.h  BrandPacket.h  ChatMessagePacket.h  ClientAbilitiesPacket.h  ClientSettingsPacket.h  ClientStatusPacket.h  DeclareCommandsPacket.h  DestroyEntitiesPacket.h  EntityActionPacket.h  EntityAnimationPacket.h  EntityEquipmentPacket.h  EntityHeadLookPacket.h  EntityMetadataPacket.h  EntityPositionAndRotationPacket.h  EntityPositionPacket.h  EntityRotationPacket.h  EntityStatusPacket.h  EntityTeleportPacket.h  GetChatMessagePacket.h  HeldItemChangePacket.h  JoinGamePacket.h  KeepAlivePacketClientbound.h  KeepAlivePacketPlay.h  PlayerInfoPacket.h  PlayerPositionAndLookPacket.h  PlayerPositionPacket.h  SetCreativeSlotPacket.h  SpawnEntityPacket.h  SpawnNamedEntityPacket.h  TeleportConfirmPacket.h  UpdateHealthPacket.h
include/network/packet/status/: StatusPingPacket.h  StatusPongPacket.h  StatusRequestPacket.h  StatusResponsePacket.h
include/other/: ChatColor.h  Vector2.h  Vector3.h  deflate.h
include/plugins/: IPluginManager.h  LuaGameCommand.h  LuaPluginManager.h  SharpPluginManager.h
include/utility/: ConfigValidator.h  MinecraftRegistry.hpp  String.h  StringUtilities.h  TSQueue.h  VectorUtilities.h
include/utils/: MinecraftRegistry.hpp
managed/: Aetherius.runtimeconfig.json  ManagedHost.deps.json
plugins/test-plugin/: init.lua
plugins/test-plugin/server/: hello.lua
plugins/test-plugin2/: init.lua
plugins/test-plugin2/server/: hello.lua
plugins_lua/test-plugin/: init.lua
src/: Connection.cpp  Logger.cpp  Registration.cpp  Server.cpp  main.cpp
src/auth/: Auth.cpp  MojangAuth.cpp  MojangAuthHelper.cpp  OfflineAuth.cpp  UUID.cpp
src/commands/: CommandRegistry.cpp  ConsoleCommand.cpp  GameCommand.cpp
src/commands/consoleCommands/: HelpCommand.cpp
src/commands/gameCommands/: HelpGameCommand.cpp  KillCommand.cpp  PingCommand.cpp  TimeCommand.cpp
src/console/: ConsoleManager.cpp  Logger.cpp
src/crypto/: AES.cpp  RSA.cpp
src/game/nbt/: NbtBuilder.cpp
src/game/player/: Player.cpp  PlayerData.cpp  PlayerList.cpp
src/game/world/: Chunk.cpp  ChunkManager.cpp  RegionFile.cpp  World.cpp  WorldGenerator.cpp  WorldStorage.cpp
src/network/: Connection.cpp  Http.cpp  Metadata.cpp  PacketBuffer.cpp  PacketRegistry.cpp
src/network/packet/handshake/: HandshakePacket.cpp
src/network/packet/login/: EncryptionResponsePacket.cpp  LoginStartPacket.cpp  LoginSuccessPacket.cpp  SetCompressionPacket.cpp
src/network/packet/play/: ArmAnimationPacket.cpp  BlockChangePacket.cpp  BlockDigRequestPacket.cpp  BlockDigResponcePacket.cpp  BlockPlacePacket.cpp  BrandPacket.cpp  ChatMessagePacket.cpp  ClientAbilitiesPacket.cpp  ClientSettingsPacket.cpp  ClientStatusPacket.cpp  DeclareCommandsPacket.cpp  DestroyEntitiesPacket.cpp  EntityActionPacket.cpp  EntityAnimationPacket.cpp  EntityEquipmentPacket.cpp  EntityHeadLookPacket.cpp  EntityMetadataPacket.cpp  EntityPositionAndRotationPacket.cpp  EntityPositionPacket.cpp  EntityRotationPacket.cpp  EntityStatusPacket.cpp  EntityTeleportPacket.cpp  GetChatMessagePacket.cpp  HeldItemChangePacket.cpp  JoinGamePacket.cpp  KeepAlivePacketClientbound.cpp  KeepAlivePacketPlay.cpp  PlayerInfoPacket.cpp  PlayerPositionAndLookPacket.cpp  PlayerPositionPacket.cpp  SetCreativeSlotPacket.cpp  SpawnEntityPacket.cpp  SpawnNamedEntityPacket.cpp  TeleportConfirmPacket.cpp  UpdateHealthPacket.cpp
src/network/packet/status/: StatusPingPacket.cpp  StatusPongPacket.cpp  StatusRequestPacket.cpp  StatusResponsePacket.cpp
src/other/: Vector3.cpp  deflate.cpp
src/plugins/: LuaGameCommand.cpp  LuaPluginManager.cpp  SharpPluginManager.cpp
src/utility/: ConfigValidator.cpp  StringUtilities.cpp  VectorUtilities.cpp
src/utils/: ConfigValidator.cpp  StringUtilities.cpp  VectorUtilities.cpp
(+50 files in other folders)
